# play-pydantic-ai

./: README.md  pyproject.toml
src/play_pydantic_ai/: __init__.py  main.py
tests/: test_main.py
